Modify to work with just script tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
-    <script src='./bundle.js'></script>
+    <script src='./math.js'></script>
+    <script src='./sandbox.js'></script>
   </head>
 </html>
